# CG_1

Ass1/: CMakeLists.txt  Makefile  README.md  imgui.ini  marble_solitaire
Ass1/assets/shaders/: circle.fs  circle.vs
Ass1/include/: game.h  renderer.h  shader.h  theme.h
Ass1/src/: game.cpp  main.cpp  renderer.cpp  shader.cpp  theme.cpp
